@@ -1,7 +1,7 @@
 package Catalyst::Action::JSORB;
 use Moose;
 
-our $VERSION   = '0.03';
+our $VERSION   = '0.04';
 our $AUTHORITY = 'cpan:STEVAN';
 
 use JSORB;
