@@ -13,7 +13,7 @@
 
 var JSORB = function () {};
 
-JSORB.VERSION   = '0.03';
+JSORB.VERSION   = '0.04';
 JSORB.AUTHORITY = 'cpan:STEVAN';
 
 /***************************** JSORB.Client *****************************/
