@@ -5,7 +5,7 @@ use Class::Inspector;
 use File::Copy  'copy';
 use Path::Class ();
 
-our $VERSION   = '0.03';
+our $VERSION   = '0.04';
 our $AUTHORITY = 'cpan:STEVAN';
 
 has 'file' => (
