@@ -2,7 +2,7 @@ package JSORB::Core::Element;
 use Moose;
 use MooseX::AttributeHelpers;
 
-our $VERSION   = '0.03';
+our $VERSION   = '0.04';
 our $AUTHORITY = 'cpan:STEVAN';
 
 has 'name' => (
