@@ -1,7 +1,7 @@
 package JSORB::Dispatcher::Catalyst::WithInvocant;
 use Moose;
 
-our $VERSION   = '0.03';
+our $VERSION   = '0.04';
 our $AUTHORITY = 'cpan:STEVAN';
 
 extends 'JSORB::Dispatcher::Path';
