@@ -3,7 +3,7 @@ use Moose;
 
 use JSORB::Types;
 
-our $VERSION   = '0.03';
+our $VERSION   = '0.04';
 our $AUTHORITY = 'cpan:STEVAN';
 
 extends 'JSORB::Core::Element';
