@@ -8,7 +8,7 @@ use HTTP::Response;
 use Try::Tiny;
 use JSON::RPC::Common::Marshal::HTTP;
 
-our $VERSION   = '0.03';
+our $VERSION   = '0.04';
 our $AUTHORITY = 'cpan:STEVAN';
 
 with 'MooseX::Traits';
