@@ -4,7 +4,7 @@ use Moose::Role;
 use Text::SimpleTable;
 use JSON ();
 
-our $VERSION   = '0.03';
+our $VERSION   = '0.04';
 our $AUTHORITY = 'cpan:STEVAN';
 
 around 'build_handler' => sub {
