@@ -2,7 +2,7 @@ package JSORB::Server::Traits::WithStaticFiles;
 use Moose::Role;
 use MooseX::Types::Path::Class;
 
-our $VERSION   = '0.03';
+our $VERSION   = '0.04';
 our $AUTHORITY = 'cpan:STEVAN';
 
 has 'doc_root' => (
