@@ -1,7 +1,7 @@
 package JSORB::Types;
 use Moose::Util::TypeConstraints;
 
-our $VERSION   = '0.03';
+our $VERSION   = '0.04';
 our $AUTHORITY = 'cpan:STEVAN';
 
 # ... for JSORB::Procedure ....
